fix z-index issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -65,7 +65,7 @@
         width: 100%;
         height: 2.5rem;
         padding-left:4rem;
-    }  
+    }
   }
   ::ng-deep .mat-drawer-container {
     background-color: transparent !important;
@@ -83,7 +83,7 @@
     width: 15rem;
     padding: 1rem 0.5rem;
     box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-    
+
     .sidenav {
       overflow-y: scroll;
       padding-bottom: 4rem;
@@ -91,3 +91,7 @@
   }
 
 
+.app-sidenav-container {
+  position: relative;
+  z-index: 999;
+}
